rust_backtest/errors.txt
cargo :     Checking rust_backtest v0.1.0 
(C:\Github\TradingShortTerm\rust_backtest)
At line:1 char:1
+ cargo check 2>&1 | Out-File -Encoding ascii errors.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ru 
   ...\rust_backtest):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0061]: this method takes 4 arguments but 1 argument 
was supplied
   --> src\main.rs:109:12
    |
109 |     engine.add_data(quotes)?;
    |            ^^^^^^^^-------- three arguments of type 
`std::option::Option<ClientId>`, `bool`, and `bool` are 
missing
    |
note: method defined here
   --> C:\Users\aphis\.cargo\registry\src\index.crates.io-194
9cf8c6b5b557f\nautilus-backtest-0.53.0\src\engine.rs:328:12
    |
328 |     pub fn add_data(
    |            ^^^^^^^^
help: provide the arguments
    |
109 |     engine.add_data(quotes, /* 
std::option::Option<ClientId> */, /* bool */, /* bool */)?;
    |                           
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: the `?` operator can only be applied to values 
that implement `Try`
   --> src\main.rs:109:5
    |
109 |     engine.add_data(quotes)?;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^ the `?` operator cannot 
be applied to type `()`
    |
    = help: the trait `Try` is not implemented for `()`

error[E0061]: this method takes 4 arguments but 0 arguments 
were supplied
   --> src\main.rs:112:12
    |
112 |     engine.run()?;
    |            ^^^-- multiple arguments are missing
    |
note: method defined here
   --> C:\Users\aphis\.cargo\registry\src\index.crates.io-194
9cf8c6b5b557f\nautilus-backtest-0.53.0\src\engine.rs:437:12
    |
437 |     pub fn run(
    |            ^^^
help: provide the arguments
    |
112 |     engine.run(/* 
std::option::Option<nautilus_core::nanos::UnixNanos> */, /* 
std::option::Option<nautilus_core::nanos::UnixNanos> */, /* 
std::option::Option<String> */, /* bool */)?;
    |                ++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+++

error[E0599]: no method named `get_report` found for struct 
`BacktestEngine` in the current scope
   --> src\main.rs:115:25
    |
115 |     let report = engine.get_report()?;
    |                         ^^^^^^^^^^
    |
help: there is a method `get_result` with a similar name
    |
115 -     let report = engine.get_report()?;
115 +     let report = engine.get_result()?;
    |

Some errors have detailed explanations: E0061, E0277, E0599.
For more information about an error, try `rustc --explain 
E0061`.
error: could not compile `rust_backtest` (bin 
"rust_backtest") due to 4 previous errors
